; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_pixie-threads.c_pixie_begin_thread.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_pixie-threads.c_pixie_begin_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pixie_begin_thread(void (i8*)* %0, i32 %1, i8* %2) #0 {
  %4 = alloca void (i8*)*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store void (i8*)* %0, void (i8*)** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load void (i8*)*, void (i8*)** %4, align 8
  %9 = bitcast void (i8*)* %8 to i8* (i8*)*
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @pthread_create(i32* %7, i32* null, i8* (i8*)* %9, i8* %10)
  %12 = load i32, i32* %7, align 4
  %13 = sext i32 %12 to i64
  ret i64 %13
}

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8* (i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
